src/test/deca/syntax/invalid/twoMain.deca
{
print("Premier main");
}

{
print("Deuxieme main");
}